samples/_failures_safe/1761473803_7deba6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_591d190c.c: In function ‘main’:
./samples/SAFE/__tmp_591d190c.c:157: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_591d190c.c:156:9: error: expected declaration or statement at end of input
  156 |         for
      |         ^~~
./samples/SAFE/__tmp_591d190c.c:156:9: error: expected declaration or statement at end of input
